[tool.poetry]
name = "constraints-demo"
version = "0.1.0"
description = ""
authors = ["Thomas Grainger <tagrain@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
black = "^22.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
